name:                amazonka-s3-streaming
version:             0.0.1.0
synopsis:            Provides conduits to upload data to S3 using the Multipart API
description:         Please see README.md
homepage:            https://github.com/Axman6/amazonka-s3-streaming#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Mason
maintainer:          Alex.Mason@data61.csiro.au
copyright:           Copyright (c) 2016 Commonwealth Scientific and Industrial Research Organisation (CSIRO)
category:            Network, AWS, Cloud, Distributed Computing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.AWS.S3.StreamingUpload
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , amazonka
                       , amazonka-core
                       , amazonka-s3
                       , resourcet
                       , conduit
                       , conduit-extra
                       , bytestring
                       , mmorph
                       , lens
                       , mtl
                       , exceptions

  if impl(ghc < 7.11)
        build-depends:
              semigroups >= 0.12
              , transformers >=0.2
  
  -- if impl(ghc < 7.9)
  --       build-depends:

source-repository head
  type:     git
  location: https://github.com/Axman6/amazonka-s3-streaming
