name:                amazonka-s3-streaming
version:             0.0.1.0
synopsis:            Provides conduits to upload data to S3 using the Multipart API
description:         Please see README.md
homepage:            https://github.com/Axman6/amazonka-s3-streaming#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Mason
maintainer:          Alex.Mason@data61.csiro.au
copyright:           Copyright (c) 2016 Commonwealth Scientific and Industrial Research Organisation (CSIRO)
category:            Network, AWS, Cloud, Distributed Computing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.AWS.S3.StreamingUpload
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , amazonka         >= 1.3.7      && < 1.5
                       , amazonka-core    >= 1.3.7      && < 1.5
                       , amazonka-s3      >= 1.3.7      && < 1.5
                       , resourcet        >= 1.1.7.4    && < 1.2
                       , conduit          >= 1.2.6.6    && < 1.3
                       , conduit-extra    >= 1.1.13.1   && < 1.2
                       , bytestring       >= 0.10.6.0   && < 0.11
                       , mmorph           >= 1.0.6      && < 1.1
                       , lens             >= 4.13       && < 5.0
                       , mtl              >= 2.2.1      && < 2.3
                       , exceptions       >= 0.8.2.1    && < 0.9

  if impl(ghc < 7.11)
    build-depends:
      semigroups >= 0.12
      , transformers >=0.4
  
  -- -- ini 0.3.4 fails to build because it doesn't have <*
  -- if impl(ghc < 7.9)
  --   build-depends:
  --     ini >= 0.3.5
  
source-repository head
  type:     git
  location: https://github.com/Axman6/amazonka-s3-streaming
