name:                amazonka-s3-streaming
version:             2.0.0.0
synopsis:            Provides conduits to upload data to S3 using the Multipart API
description:         Provides a conduit based streaming interface and a concurrent interface to
                     uploading data to S3 using the Multipart API. Also provides method to upload
                     files or bytestrings of known size in parallel. Please see README.md.
homepage:            https://github.com/Axman6/amazonka-s3-streaming#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Mason
maintainer:          amazonka-s3-streaming@me.axman6.com
copyright:           Alex Mason, Copyright (c) 2016 Commonwealth Scientific and Industrial Research Organisation (CSIRO)
category:            Network, AWS, Cloud, Distributed Computing
build-type:          Simple
extra-source-files:  README.md, Changelog.md
cabal-version:       >=1.10
tested-with:         GHC ==8.10.7 || ==9.0.2 || ==9.2.2


library
  hs-source-dirs:      src
  exposed-modules:     Amazonka.S3.StreamingUpload
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -Wpartial-fields
                       -Wno-unrecognised-pragmas
                       -Wunused-packages
  build-depends:       base >= 4.9 && < 5
                       , amazonka         >= 2.0        && < 2.1
                       , amazonka-s3      >= 2.0        && < 2.1
                       , conduit          >= 1.3        && < 1.4
                       , async            >= 2          && < 2.3
                       , bytestring       >= 0.10.8.0   && < 0.12
                       , deepseq
                       , exceptions       >= 0.8.2.1    && < 0.11
                       , http-client      >= 0.4        && < 0.8
                       , http-client-tls  >= 0.3        && < 0.4
                       , mtl              >= 2.2.1      && < 2.3
                       , text
                       , resourcet

flag s3upload-exe
  Description: Whether to build the s3upload executable for uploading files using this library.
  default: False
  manual: True

source-repository head
  type:     git
  location: https://github.com/Axman6/amazonka-s3-streaming

executable s3upload
  main-is: Main.hs
  ghc-options: -threaded -rtsopts "-with-rtsopts=-N -qg"
  default-language: Haskell2010
  if flag(s3upload-exe)
    buildable: True
  else
    buildable: False
  build-depends: base
                 , amazonka
                 , amazonka-s3
                 , amazonka-s3-streaming
                 , conduit-extra
                 , conduit
                 , text
                 , resourcet
